Add tailwind, add communication with strapi

--- a/.eslintrc
+++ b/.eslintrc
@@ -55,7 +55,7 @@
     "quotes": "off",
     "@typescript-eslint/quotes": [
       2,
-      "backtick",
+      "single",
       {
         "avoidEscape": true
       }
